<resources>
    <string name="app_name">lab4</string>
    <string name="task_title">task title</string>
    <string name="task_description">task description</string>
    <string name="add_task">add task</string>
    <string name="default_title">default title</string>
    <string name="default_description">default description</string>

    <string-array name="images">
        <item>drawable 1</item>
        <item>drawable 2</item>
        <item>drawable 3</item>
    </string-array>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="textview">TextView</string>
    <string name="item_selected_msg">Item selected</string>
    <string name="delete_question">Are you sure to delete this one?</string>
    <string name="dialog_confirm">Confirm</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="long_click_msg">long click msg</string>
    <string name="delete_cancel_msg">delete cancel msg</string>
    <string name="retry_msg">retry msg</string>
    <string name="delete_dialog_tag">delete dialog tag</string>

    <string name="myFileprovider">com.pl.lab4.fileprovider</string>
    <string name="prefs">PREFS</string>
    <string name="text">TEXT</string>
    <string name="json">JSON</string>
</resources>
